# cmini-rs

./: Cargo.toml  README.md  json-to-db.py  schema.sql
benches/: benchmarks.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/commands/: corpus.rs  eightball.rs  freqs.rs  mod.rs  view.rs
corpora/: trigrams.json
discord/: Cargo.toml
discord/src/: main.rs
discord/src/commands/: add.rs  age.rs  corpus.rs  dofball.rs  eightball.rs  freqs.rs  mod.rs  server.rs  view.rs
old-benchmarks/: Cargo.toml
old-benchmarks/src/: get_trigrams_json.rs  lib.rs
